update for AdministrativeDivisionSpatialAnalysis feature